Fix Overflow Div
update footer.scss

--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,254 @@
-/* Error: expected selector.
- *    ,
- * 29 |             @extend btn(600)}
- *    |                        ^
- *    '
- *   scss\footer.scss 29:24  @import
- *   scss\main.scss 3:9      root stylesheet */
-
-body::before {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
-      "Droid Sans Mono", monospace, monospace;
-  white-space: pre;
-  display: block;
-  padding: 1em;
-  margin-bottom: 1em;
-  border-bottom: 2px solid black;
-  content: "Error: expected selector.\a    \2577 \a 29 \2502              @extend btn(600)}\d\a    \2502                         ^\a    \2575 \a   scss\\footer.scss 29:24  @import\a   scss\\main.scss 3:9      root stylesheet";
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
+
+header {
+  background-image: url(images/bg-hero-desktop.svg);
+  background-color: #ebfbff;
+}
+header .nav {
+  display: flex;
+  height: 83px;
+  justify-content: space-between;
+  margin-right: 30px;
+  margin-left: 30px;
+}
+header .nav img {
+  width: 185px;
+  height: 35px;
+  margin-top: 24px;
+  margin-left: 56px;
+}
+header .nav button {
+  margin-top: 23px;
+  margin-bottom: 19px;
+  background-color: white;
+  border-radius: 50px;
+  width: 170px;
+  border: 1px;
+  box-shadow: 2px 2px 10px grey;
+}
+header .div_header {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+header .div_header .part1 {
+  grid-column: 1/3;
+  margin-left: 80px;
+  align-self: center;
+}
+header .div_header .part1 h1 {
+  font-size: 50px;
+}
+header .div_header .part1 p {
+  margin-top: 20px;
+}
+header .div_header .part1 button {
+  background-color: #ff52bf;
+  border-radius: 25px;
+  padding: 10px;
+  width: 200px;
+  color: white;
+  margin-top: 20px;
+  border: 1px;
+}
+header .div_header .part2 {
+  justify-self: center;
+  grid-column: 3/5;
+}
+header .div_header .part2 img {
+  width: 600px;
+  margin-top: 40px;
+}
+
+.body {
+  max-width: 1000px;
+  margin: 10px auto;
+  font-family: "Open Sans", sans-serif;
+}
+
+.carte3, .carte2, .carte1 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin: 20px auto;
+  padding: 40px;
+  border-radius: 6px;
+  box-shadow: gray 0px 0px 5px;
+}
+.carte3 div, .carte2 div, .carte1 div {
+  margin: 30px auto;
+}
+.carte3 div h3, .carte2 div h3, .carte1 div h3 {
+  font-weight: 700;
+}
+.carte3 div p, .carte2 div p, .carte1 div p {
+  font-weight: 400;
+}
+.carte3 img, .carte2 img, .carte1 img {
+  width: 300px;
+  height: 245px;
+}
+@media (max-width: 375px) {
+  .carte3, .carte2, .carte1 {
+    grid-template-columns: 1fr;
+  }
+}
+
+.carte1 img {
+  margin-left: 184px;
+}
+@media (max-width: 375px) {
+  .carte1 img {
+    width: 100%;
+    margin-left: 0px;
+  }
+}
+
+.carte2 img {
+  grid-column: 1/2;
+  grid-row: 1/2;
+}
+@media (max-width: 375px) {
+  .carte2 img {
+    width: 100%;
+    grid-row: 2/3;
+    grid-column: 2/3;
+  }
+}
+.carte2 div {
+  grid-column: 2/3;
+  grid-row: 1/2;
+}
+
+.carte3 img {
+  margin-left: 165px;
+}
+@media (max-width: 375px) {
+  .carte3 img {
+    width: 100%;
+    margin-left: 0px;
+  }
+}
+
+body .free {
+  -webkit-box-shadow: 0px 0px 24px -9px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 0px 24px -9px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 24px -9px rgba(0, 0, 0, 0.75);
+}
+
+body {
+  margin: 0px;
+}
+body .free {
+  max-width: 500px;
+  background-color: white;
+  margin: 0px auto;
+  text-align: center;
+  padding: 30px;
+  position: absolute;
+  bottom: -82%;
+  right: 30%;
+  left: 30%;
+  z-index: 10;
+  border-radius: 1em;
+}
+body .free button {
+  background-color: #ff52bf;
+  border-radius: 25px;
+  padding: 10px;
+  width: 200px;
+  color: white;
+  margin-top: 20px;
+  border: 1px;
+  width: 400px;
+}
+body footer {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 4fr 1fr;
+  grid-gap: 20px;
+  background-color: #00252e;
+  color: white;
+  margin-top: 80px;
+  padding: 20px;
+  padding-top: 150px;
+}
+body footer .col1 {
+  display: flex;
+  flex-direction: row;
+}
+body footer .col1 img {
+  height: 20px;
+  width: 20px;
+  margin-right: 10px;
+  place-self: center;
+}
+body footer .col1 p {
+  margin-left: 30px;
+  margin-bottom: 10px;
+}
+body footer .col1 p a {
+  color: inherit;
+  text-decoration: none;
+}
+body footer .contact {
+  grid-column: 1/2;
+  justify-self: center;
+}
+body footer .contact .logo {
+  width: 200px;
+  margin-bottom: 20px;
+}
+body footer .about {
+  grid-column: 2/3;
+  justify-self: center;
+}
+body footer .career {
+  grid-column: 3/4;
+  justify-self: center;
+}
+body footer .social {
+  grid-column: 4/5;
+  justify-self: center;
+}
+body footer .copyright {
+  grid-column: 4/5;
+  grid-row: 2/3;
+  justify-self: center;
+}
+
+@media only screen and (max-width: 750) {
+  footer {
+    display: flex;
+    flex-direction: column;
+  }
+  footer .contact {
+    flex-direction: column;
+    justify-self: center;
+  }
+  footer .contact .logo {
+    width: 200px;
+    margin-bottom: 20px;
+  }
+  footer .about {
+    flex-direction: column;
+    justify-self: center;
+  }
+  footer .career {
+    flex-direction: column;
+    justify-self: center;
+  }
+  footer .social {
+    flex-direction: column;
+    justify-self: center;
+  }
+  footer .copyright {
+    flex-direction: column;
+    justify-self: center;
+  }
+}
+
+/*# sourceMappingURL=style.css.map */
