--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -1,6 +1,3 @@
-$back:hsl(192, 100%, 9%);
-$pink:hsl(322, 100%, 66%);
-
 %shadow {
     -webkit-box-shadow: 0px 0px 24px -9px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: 0px 0px 24px -9px rgba(0, 0, 0, 0.75);
@@ -13,12 +10,11 @@ body {
     .free {
         max-width: 500px;
         background-color: white;
-        // float: after;
         margin: 0px auto;
         text-align: center;
         padding: 30px;
         position: absolute;
-        top: 0%;
+        bottom: -82%;
         right: 30%;
         left: 30%;
         z-index: 10;
@@ -26,7 +22,8 @@ body {
         @extend %shadow;
 
         button {
-            @extend btn(600)
+            @include btn();
+            width: 400px;
         }
     }
 
@@ -54,6 +51,7 @@ body {
 
             p {
                 margin-left: 30px;
+                margin-bottom: 10px;
 
                 a {
                     color: inherit;
